--- a/index.html
+++ b/index.html
@@ -41,46 +41,46 @@
             </div>
           </div>
           <div class="w3-container">
-            <p><i class="fa fa-briefcase fa-fw w3-margin-right w3-large w3-text-indigo"></i>Game Programmer</p>
-            <p><i class="fa fa-home fa-fw w3-margin-right w3-large w3-text-indigo"></i>Titwala, India</p>
-            <p><i class="fa fa-envelope fa-fw w3-margin-right w3-large w3-text-indigo"></i>dhirajv224@gmail.com</p>
-            <p><i class="fa fa-phone fa-fw w3-margin-right w3-large w3-text-indigo"></i>+91 9967504251</p>
+            <p><i class="fa fa-briefcase fa-fw w3-margin-right w3-large w3-text-orange"></i>Game Programmer</p>
+            <p><i class="fa fa-home fa-fw w3-margin-right w3-large w3-text-orange"></i>Titwala, India</p>
+            <p><i class="fa fa-envelope fa-fw w3-margin-right w3-large w3-text-orange"></i>dhirajv224@gmail.com</p>
+            <p><i class="fa fa-phone fa-fw w3-margin-right w3-large w3-text-orange"></i>+91 9967504251</p>
             <hr>
 
-            <p class="w3-large"><b><i class="fa fa-asterisk fa-fw w3-margin-right w3-text-indigo"></i>Skills</b></p>
+            <p class="w3-large"><b><i class="fa fa-asterisk fa-fw w3-margin-right w3-text-orange"></i>Skills</b></p>
             <p>Unity Programming</p>
             <div class="w3-light-grey w3-round-xlarge w3-small">
-              <div class="w3-container w3-center w3-round-xlarge w3-indigo" style="width:90%">80%</div>
+              <div class="w3-container w3-center w3-round-xlarge w3-orange" style="width:90%">80%</div>
             </div>
             <p>C#</p>
             <div class="w3-light-grey w3-round-xlarge w3-small">
-              <div class="w3-container w3-center w3-round-xlarge w3-indigo" style="width:80%">
+              <div class="w3-container w3-center w3-round-xlarge w3-orange" style="width:80%">
                 <div class="w3-center w3-text-white">70%</div>
               </div>
             </div>
             <p>Blender</p>
             <div class="w3-light-grey w3-round-xlarge w3-small">
-              <div class="w3-container w3-center w3-round-xlarge w3-indigo" style="width:60%">60%</div>
+              <div class="w3-container w3-center w3-round-xlarge w3-orange" style="width:60%">60%</div>
             </div>
             <p>Construct 3</p>
             <div class="w3-light-grey w3-round-xlarge w3-small">
-              <div class="w3-container w3-center w3-round-xlarge w3-indigo" style="width:50%">50%</div>
+              <div class="w3-container w3-center w3-round-xlarge w3-orange" style="width:50%">50%</div>
             </div>
             <p>AR/VR with Unity</p>
             <div class="w3-light-grey w3-round-xlarge w3-small">
-              <div class="w3-container w3-center w3-round-xlarge w3-indigo" style="width:60%">60%</div>
+              <div class="w3-container w3-center w3-round-xlarge w3-orange" style="width:60%">60%</div>
             </div>
             <br>
 
             <p class="w3-large w3-text-theme"><b><i
-                  class="fa fa-globe fa-fw w3-margin-right w3-text-indigo"></i>Languages</b></p>
+                  class="fa fa-globe fa-fw w3-margin-right w3-text-orange"></i>Languages</b></p>
             <p>Hindi</p>
             <div class="w3-light-grey w3-round-xlarge">
-              <div class="w3-round-xlarge w3-indigo" style="height:24px;width:100%"></div>
+              <div class="w3-round-xlarge w3-orange" style="height:24px;width:100%"></div>
             </div>
             <p>English</p>
             <div class="w3-light-grey w3-round-xlarge">
-              <div class="w3-round-xlarge w3-indigo" style="height:24px;width:55%"></div>
+              <div class="w3-round-xlarge w3-orange" style="height:24px;width:55%"></div>
             </div>
             <br>
           </div>
@@ -94,11 +94,11 @@
 
         <div class="w3-container w3-card w3-white w3-margin-bottom">
           <h2 class="w3-text-grey w3-padding-16"><i
-              class="fa fa-suitcase fa-fw w3-margin-right w3-xxlarge w3-text-indigo"></i>Work Experience</h2>
+              class="fa fa-suitcase fa-fw w3-margin-right w3-xxlarge w3-text-orange"></i>Work Experience</h2>
           <div class="w3-container">
             <h5 class="w3-opacity"><b>Unity Programmer / GameEon Studio PVT LTD</b></h5>
-            <h6 class="w3-text-indigo"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Apr 2022 - <span
-                class="w3-tag w3-indigo w3-round">Current</span></h6>
+            <h6 class="w3-text-orange"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Apr 2022 - <span
+                class="w3-tag w3-orange w3-round">Current</span></h6>
             <p>
             <ul>
               <li>Working as Unity programmer to develop interesting and attractive Hyper Casual Games.</li>
@@ -112,7 +112,7 @@
           </div>
           <div class="w3-container">
             <h5 class="w3-opacity"><b>Unity Programmer / 3MG Production PVT LTD</b></h5>
-            <h6 class="w3-text-indigo"><i class="fa fa-calendar fa-fw w3-margin-right"></i>May 2020 - Sep 2021</h6>
+            <h6 class="w3-text-orange"><i class="fa fa-calendar fa-fw w3-margin-right"></i>May 2020 - Sep 2021</h6>
             <p>
             <ul>
               <li>Worked as Hyper Casual Mobile Game Programmer and created Idle Arcade games with more than 30 minuts
@@ -124,7 +124,7 @@
           </div>
           <div class="w3-container">
             <h5 class="w3-opacity"><b>Jr. Unity Programmer / Firescore Interactive PVT. LTD.</b></h5>
-            <h6 class="w3-text-indigo"><i class="fa fa-calendar fa-fw w3-margin-right"></i>May 2020 - Sep 2021</h6>
+            <h6 class="w3-text-orange"><i class="fa fa-calendar fa-fw w3-margin-right"></i>May 2020 - Sep 2021</h6>
             <p>
             <ul>
               <li>Worked as Hyper Casual Mobile Game Programmer.</li>
@@ -135,7 +135,7 @@
           </div>
           <div class="w3-container">
             <h5 class="w3-opacity"><b>Space Manager / makerghat.org</b></h5>
-            <h6 class="w3-text-indigo"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Jan 2019 - Jul 2019</h6>
+            <h6 class="w3-text-orange"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Jan 2019 - Jul 2019</h6>
             <p>
             <ul>
               <li>Led meetings, calls and on-site testing to understand specific member’s interests and needs. </li>
@@ -149,7 +149,7 @@
           </div>
           <div class="w3-container">
             <h5 class="w3-opacity"><b>Data Coordinator for Community GIS / Asha Mumbai</b></h5>
-            <h6 class="w3-text-indigo"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Jan 2018 - Jul 2019</h6>
+            <h6 class="w3-text-orange"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Jan 2018 - Jul 2019</h6>
             <p>
             <ul>
               <li>Extracted and cleaned Maharashtra census data and charted it geographically on maps.</li>
@@ -166,16 +166,16 @@
         </div>
         <div class="w3-container w3-card w3-white">
           <h2 class="w3-text-grey w3-padding-16"><i
-              class="fa fa-certificate fa-fw w3-margin-right w3-xxlarge w3-text-indigo"></i>Education</h2>
+              class="fa fa-certificate fa-fw w3-margin-right w3-xxlarge w3-text-orange"></i>Education</h2>
           <div class="w3-container">
             <h5 class="w3-opacity"><b>Mumbai University</b></h5>
-            <h6 class="w3-text-indigo"><i class="fa fa-calendar fa-fw w3-margin-right"></i>2017-2020</h6>
+            <h6 class="w3-text-orange"><i class="fa fa-calendar fa-fw w3-margin-right"></i>2017-2020</h6>
             <p>Bachelor of Science: Computer Science</p>
             <hr>
           </div>
           <div class="w3-container">
             <h5 class="w3-opacity"><b>Maharashtra State Board, SM Shetty College</b></h5>
-            <h6 class="w3-text-indigo"><i class="fa fa-calendar fa-fw w3-margin-right"></i>2013 - 2015</h6>
+            <h6 class="w3-text-orange"><i class="fa fa-calendar fa-fw w3-margin-right"></i>2013 - 2015</h6>
             <p>HSC PMCB Science</p>
             <hr>
           </div>
@@ -190,7 +190,7 @@
     <!-- End Page Container -->
   </div>
 
-  <footer class="w3-container w3-indigo w3-center w3-margin-top">
+  <footer class="w3-container w3-orange w3-center w3-margin-top">
     <p>Find me on social media.</p>
     <a href="https://github.com/dhiraj7894"><i class="fa fa-github w3-hover-opacity"></i></a>
     <a href="https://www.youtube.com/@soloDHIRAJ"><i class="fa fa-youtube w3-hover-opacity"> </i></a>
