--- a/index.html
+++ b/index.html
@@ -50,7 +50,8 @@
             <p class="w3-large"><b><i class="fa fa-asterisk fa-fw w3-margin-right w3-text-orange"></i>Skills</b></p>
             <p>Unity Programming</p>
             <div class="w3-light-grey w3-round-xlarge w3-small">
-              <div class="w3-container w3-center w3-round-xlarge w3-orange" style="width:90%">80%</div>
+              <div class="w3-container w3-center w3-round-xlarge w3-orange" style="width:90%">
+                <div class="w3-center w3-text-white">80% </div></div>
             </div>
             <p>C#</p>
             <div class="w3-light-grey w3-round-xlarge w3-small">
@@ -60,15 +61,15 @@
             </div>
             <p>Blender</p>
             <div class="w3-light-grey w3-round-xlarge w3-small">
-              <div class="w3-container w3-center w3-round-xlarge w3-orange" style="width:60%">60%</div>
+              <div class="w3-container w3-center w3-round-xlarge w3-orange" style="width:60%"><div class="w3-center w3-text-white">60%</div></div>
             </div>
             <p>Construct 3</p>
             <div class="w3-light-grey w3-round-xlarge w3-small">
-              <div class="w3-container w3-center w3-round-xlarge w3-orange" style="width:50%">50%</div>
+              <div class="w3-container w3-center w3-round-xlarge w3-orange" style="width:50%"><div class="w3-center w3-text-white">50%</div></div>
             </div>
             <p>AR/VR with Unity</p>
             <div class="w3-light-grey w3-round-xlarge w3-small">
-              <div class="w3-container w3-center w3-round-xlarge w3-orange" style="width:60%">60%</div>
+              <div class="w3-container w3-center w3-round-xlarge w3-orange" style="width:60%"><div class="w3-center w3-text-white">60%</div></div>
             </div>
             <br>
 
@@ -97,8 +98,9 @@
               class="fa fa-suitcase fa-fw w3-margin-right w3-xxlarge w3-text-orange"></i>Work Experience</h2>
           <div class="w3-container">
             <h5 class="w3-opacity"><b>Unity Programmer / GameEon Studio PVT LTD</b></h5>
-            <h6 class="w3-text-orange"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Apr 2022 - <span
-                class="w3-tag w3-orange w3-round">Current</span></h6>
+            <!--<h6 class="w3-text-orange"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Apr 2022 - <span
+                class="w3-tag w3-orange w3-round">Current</span></h6>-->
+                <h6 class="w3-text-orange"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Apr 2022 - Jun 2023</h6>
             <p>
             <ul>
               <li>Working as Unity programmer to develop interesting and attractive Hyper Casual Games.</li>
