--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <hr>
 
             <p class="w3-large"><b><i class="fa fa-asterisk fa-fw w3-margin-right w3-text-orange"></i>Skills</b></p>
-            <p>Unity Programming</p>
+            <p>Unity</p>
             <div class="w3-light-grey w3-round-xlarge w3-small">
               <div class="w3-container w3-center w3-round-xlarge w3-orange" style="width:90%">
                 <div class="w3-center w3-text-white">80% </div></div>
@@ -135,7 +135,7 @@
             </p>
             <hr>
           </div>
-          <div class="w3-container">
+          <!-- <div class="w3-container">
             <h5 class="w3-opacity"><b>Space Manager / makerghat.org</b></h5>
             <h6 class="w3-text-orange"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Jan 2019 - Jul 2019</h6>
             <p>
@@ -164,7 +164,7 @@
                 Maharashtra state government over period of 4 years.</li>
             </ul>
             </p><br>
-          </div>
+          </div> -->
         </div>
         <div class="w3-container w3-card w3-white">
           <h2 class="w3-text-grey w3-padding-16"><i
