--- a/index.html
+++ b/index.html
@@ -96,6 +96,22 @@
         <div class="w3-container w3-card w3-white w3-margin-bottom">
           <h2 class="w3-text-grey w3-padding-16"><i
               class="fa fa-suitcase fa-fw w3-margin-right w3-xxlarge w3-text-orange"></i>Work Experience</h2>
+              <div class="w3-container">
+                <h5 class="w3-opacity"><b>Unity Programmer / Moong Labs Technologies Pvt Ltd</b></h5>
+                <!--<h6 class="w3-text-orange"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Apr 2022 - <span
+                    class="w3-tag w3-orange w3-round">Current</span></h6>-->
+                    <h6 class="w3-text-orange"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Jun 2023 - Current</h6>
+                <p>
+                <ul>
+                  <li>Collaborated on a cricket game project within Unity, contributing to various aspects of game development.</li>
+                  <li>Identified and resolved software bugs within the cricket game. This included debugging, troubleshooting, and ensuring the game's stability and performance.</li>
+                  <li>Successfully integrated new modules and features into the game using Unity. This involved coding and ensuring that the new functionalities seamlessly blended with the existing game framework.</li>
+                  <li> Actively participated in the testing phase of the game development process. Conducted thorough testing of game builds to identify and report issues, and worked towards their resolution.</li>                  
+                  <li>Utilized version control systems (e.g., Git) to manage and track changes in the game's source code, enabling efficient collaboration and code management.</li>
+                </ul>
+                </p>
+                <hr>
+              </div>
           <div class="w3-container">
             <h5 class="w3-opacity"><b>Unity Programmer / GameEon Studio PVT LTD</b></h5>
             <!--<h6 class="w3-text-orange"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Apr 2022 - <span
