--- a/index.html
+++ b/index.html
@@ -97,10 +97,44 @@
           <h2 class="w3-text-grey w3-padding-16"><i
               class="fa fa-suitcase fa-fw w3-margin-right w3-xxlarge w3-text-orange"></i>Work Experience</h2>
               <div class="w3-container">
-                <h5 class="w3-opacity"><b>Unity Programmer / Moong Labs Technologies Pvt Ltd</b></h5>
+                <h5 class="w3-opacity"><b>Unity Programmer / ComXR Virtual Reality India</b></h5>                
                 <!--<h6 class="w3-text-orange"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Apr 2022 - <span
                     class="w3-tag w3-orange w3-round">Current</span></h6>-->
-                    <h6 class="w3-text-orange"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Jun 2023 - Current</h6>
+                    <h6 class="w3-text-orange"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Feb 2024 - Current</h6>
+                <p>
+                <ul>
+                  <li>Currently working at a company specializing in VR/AR development for automotive projects.</li>
+                  <li>Focused on creating detailed VR/AR experiences for car refinement and refitment procedures.</li>
+                  <li>Created immersive info panels that provide in-depth information about every car part, enhancing user understanding and engagement.</li>
+                  <li>Utilized VR/AR technology to offer a hands-on learning experience for mechanics, engineers, and car enthusiasts, improving their skills and knowledge.</li>                                    
+                  <li>Worked on image tracking projects using PlayCanvas to enhance AR capabilities.</li>                                    
+                  <li>Developed web-based automobile integration systems to provide seamless user experiences across platforms.</li>                                    
+                </ul>
+                </p>
+                <hr>
+              </div>
+              <div class="w3-container">
+                <h5 class="w3-opacity"><b>Unity Programmer / Constituents Ai And Technology Private Limited</b></h5>
+                <h6 class="w3-opacity">Freelance</h6>
+                <!--<h6 class="w3-text-orange"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Apr 2022 - <span
+                    class="w3-tag w3-orange w3-round">Current</span></h6>-->
+                    <h6 class="w3-text-orange"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Oct 2023 - Jan 2024</h6>
+                <p>
+                <ul>
+                  <li>Worked as a freelance VR developer at a studio specializing in educational content.</li>
+                  <li>Developed interactive VR lessons for science subjects for students from grades 8 to 10.</li>
+                  <li>Recreated biology, chemistry, and physics experiments in a virtual environment.</li>
+                  <li>Designed immersive experiences, such as simulating chemical reactions with interactive elements and audio guides.</li>                  
+                  <li>Enhanced learning by providing visual representations of molecular processes and detailed explanations to aid student understanding.</li>
+                </ul>
+                </p>
+                <hr>
+              </div>
+              <div class="w3-container">
+                <h5 class="w3-opacity"><b>Unity Programmer / Moong Labs Technologies Pvt Ltd</b></h5>                
+                <!--<h6 class="w3-text-orange"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Apr 2022 - <span
+                    class="w3-tag w3-orange w3-round">Current</span></h6>-->
+                    <h6 class="w3-text-orange"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Jun 2023 - Oct 2023</h6>
                 <p>
                 <ul>
                   <li>Collaborated on a cricket game project within Unity, contributing to various aspects of game development.</li>
