--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                 <h5 class="w3-opacity"><b>Unity Programmer / Moong Labs Technologies Pvt Ltd</b></h5>
                 <!--<h6 class="w3-text-orange"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Apr 2022 - <span
                     class="w3-tag w3-orange w3-round">Current</span></h6>-->
-                    <h6 class="w3-text-orange"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Jun 2023 - Current</h6>
+                    <h6 class="w3-text-orange"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Jul 2023 - Oct 2023</h6>
                 <p>
                 <ul>
                   <li>Collaborated on a cricket game project within Unity, contributing to various aspects of game development.</li>
@@ -116,7 +116,7 @@
             <h5 class="w3-opacity"><b>Unity Programmer / GameEon Studio PVT LTD</b></h5>
             <!--<h6 class="w3-text-orange"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Apr 2022 - <span
                 class="w3-tag w3-orange w3-round">Current</span></h6>-->
-                <h6 class="w3-text-orange"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Apr 2022 - Jun 2023</h6>
+                <h6 class="w3-text-orange"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Apr 2022 - Jul 2023</h6>
             <p>
             <ul>
               <li>Working as Unity programmer to develop interesting and attractive Hyper Casual Games.</li>
@@ -209,11 +209,9 @@
   </div>
 
   <footer class="w3-container w3-orange w3-center w3-margin-top">
-    <p>Find me on social media.</p>
-    <a href="https://github.com/dhiraj7894"><i class="fa fa-github w3-hover-opacity"></i></a>
-    <a href="https://www.youtube.com/@soloDHIRAJ"><i class="fa fa-youtube w3-hover-opacity"> </i></a>
-    <a href="https://www.instagram.com/_dev_dhiraj_/"><i class="fa fa-instagram w3-hover-opacity"> </i></a>
-    <a href="https://www.linkedin.com/in/dhirajlal/"><i class="fa fa-linkedin w3-hover-opacity"> </i> </a>
+    <a href="https://github.com/dhiraj7894"><i class="fa fa-github w3-hover-opacity w3-xxlarge"></i></a>
+    <a href="https://www.linkedin.com/in/dhirajlal/"><i class="fa fa-linkedin w3-hover-opacity w3-xxlarge"> </i> </a>
+    <a href="https://dhiraj7894.github.io/portfolio/"><i class="fa fa-globe w3-hover-opacity w3-xxlarge"> </i> </a>
   </footer>
 
 </body>
